# garbage-classification

./: .gitignore  README.md  app.py  cnn-kan-lion-pipeline.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
