[project]
name = "garbage-classification"
version = "0.1.0"
description = "CNN-KAN waste classification app with Streamlit — supports 12 waste categories, real-time webcam inference, and bilingual UI (ID/EN)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ahmad Nur Sahid", email = "ahmadnr415@gmail.com" }]
keywords = [
    "deep-learning",
    "cnn",
    "kan",
    "kolmogorov-arnold",
    "waste-classification",
    "streamlit",
    "tensorflow",
    "computer-vision",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "streamlit>=1.35.0",
    "tensorflow>=2.16.0",
    "tf-kan-latest>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/ahmaadn/garbage-classification"
Repository = "https://github.com/ahmaadn/garbage-classification"
Issues = "https://github.com/ahmaadn/garbage-classification/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
